--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -3,6 +3,8 @@
   <% if(user){ %>
     <a href="/jobApps">My Applications</a>
     <a href="/auth/logout">Log Out</a>
+    <a href="/auth/profile"><%= user.username%></a>
+    <a href="/companies">Companies</a>
   <% } else { %>
     <a href="/auth/register">Register</a>
     <a href="/auth/login">Log In</a>
