--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,11 +6,11 @@
     <title>Landing Page</title>
     <link rel="stylesheet" href="stylesheets/style.css" />
   </head>
-  <body class="index-body">
+  <body>
     <%- include("partials/nav.ejs") %>
 
-    <div class="main-container">
-      <h1 class="main-header">Landing Page</h1>
+    <div>
+      <h1>Landing Page</h1>
       <h2>A job application tracker.</h2>
     </div>
   </body>
