--- a/views/jobApps/edit.ejs
+++ b/views/jobApps/edit.ejs
@@ -10,8 +10,10 @@
   </head>
   <body>
     <%- include('../partials/nav.ejs'); %>
-    <div class="content">
-      <h1><%= pageTitle %></h1>
+    <main class="page-container">
+      <header>
+        <h1 class="page-header"><%= pageTitle %></h1>
+      </header>
       <form class="crud-form" action="/jobApps/<%=jobApp._id%>?_method=PUT" method="POST">
         <div class="field">
           <label for="company">Company</label>
@@ -74,6 +76,6 @@
           <button type="submit">Save Application</button>
         </div>
       </form>
-    </div>
+    </main>
   </body>
 </html>
