--- a/views/jobApps/edit.ejs
+++ b/views/jobApps/edit.ejs
@@ -11,18 +11,18 @@
   <body>
     <%- include('../partials/nav.ejs'); %>
     <main class="page-container">
-      <header>
-        <h1 class="page-header"><%= pageTitle %></h1>
-      </header>
+      <%- include('../partials/pageHeader.ejs'); %>
       <form class="crud-form" action="/jobApps/<%=jobApp._id%>?_method=PUT" method="POST">
         <div class="field">
           <label for="company">Company</label>
-          <input
-            type="text"
-            name="company"
-            id="company"
-            value="<%= jobApp.company %>"
-          />
+          <select name="company" id="company">
+            <% for(let i = 0; i < companies.length; i ++){ %>
+              <option
+                value="<%= companies[i]._id %>" 
+                <%= (String(jobApp.company._id)==String(companies[i]._id))?"selected":"" %>
+              ><%= companies[i].name %></option>
+            <% } %>
+          </select>
         </div>
         <div class="field">
           <label for="title">Job Title</label>
