--- a/views/companies/index.ejs
+++ b/views/companies/index.ejs
@@ -10,10 +10,8 @@
     <%- include('../partials/nav.ejs')%>
     
     <main class="page-container">
-      <header class="page-header">
-        <h1><%= pageTitle %></h1>
-        <a class="btn btn-primary btn-lg" href="/companies/new">+ ADD COMPANY</a>
-      </header>
+      <%- include('../partials/pageHeader.ejs'); %>
+      <a class="btn btn-primary btn-lg" href="/companies/new">+ ADD COMPANY</a>
 
       <div class="table-container">
         <div class="table-header">
