--- a/views/jobApps/new.ejs
+++ b/views/jobApps/new.ejs
@@ -9,58 +9,104 @@
       <%- include('../partials/pageHeader.ejs'); %>
 
       <form class="crud-form" action="/jobApps" method="POST">
-        <div class="field">
-          <label for="company">Company</label>
-          <select name="company" id="company">
-            <% for(let i = 0; i < companies.length; i ++){ %>
-              <option value="<%= companies[i].id %>"><%= companies[i].name %></option>
-            <% } %>
-          </select>
-        </div>
-        <div class="field">
-          <label for="title">Job Title</label>
-          <input type="text" name="title" id="title" />
-        </div>
-        <div class="field">
-          <label for="status">Application Status</label>
-          <select name="status" id="status">
-            <option value="Applied">Applied</option>
-            <option value="Interviewing">Interviewing</option>
-            <option value="Offer">Offer</option>
-            <option value="Rejected">Rejected</option>
-          </select>
-        </div>
-        <div class="field">
-          <label for="source">Application Source</label>
-          <select name="source" id="source">
-            <option value="LinkedIn">LinkedIn</option>
-            <option value="Indeed">Indeed</option>
-            <option value="Company Site">Company Site</option>
-            <option value="Networking">Networking</option>
-          </select>
-        </div>
-        <div class="field">
-          <label for="priority">Application Priority</label>
-          <select name="priority" id="priority">
-            <option value="Low">Low</option>
-            <option value="Medium">Medium</option>
-            <option value="High">High</option>
-          </select>
-        </div>
-        <div class="field">
-          <label for="url">Link</label>
-          <input type="text" name="url" id="url" />
-        </div>
-        <div class="field">
-          <label for="archived">Archived</label>
-          <input type="checkbox" name="archived" id="archived" />
-        </div>
-        <div class="field">
-          <label for="appliedAt">Application Date</label>
-          <input type="date" name="appliedAt" id="appliedAt" />
-        </div>
+        <%- include('../partials/selectInput', {
+          fieldName: "company",
+          fieldLabel: "Company",
+          fieldValue: companies.length?String(companies[0]._id):"",
+          fieldOptions: companies.map(company=>{return {value: String(company._id), label: company.name}})
+        })%>
+        <%- include('../partials/textInput.ejs', {
+          fieldName: "title",
+          fieldLabel: "Title",
+          fieldValue: ""
+        }) %>
+        <%- include('../partials/selectInput', {
+          fieldName: "status",
+          fieldLabel: "Application Status",
+          fieldValue: "Applied",
+          fieldOptions: [
+            {
+              value: "Applied",
+              label: "Applied"
+            },
+            {
+              value: "Interviewing",
+              label: "Interviewing"
+            },
+            {
+              value: "Offer",
+              label: "Offer"
+            },
+            {
+              value: "Rejected",
+              label: "Rejected"
+            }
+          ]
+        })%>
+
+        <%- include('../partials/selectInput', {
+          fieldName: "source",
+          fieldLabel: "Application Source",
+          fieldValue: "LinkedIn",
+          fieldOptions: [
+            {
+              value: "LinkedIn",
+              label: "LinkedIn"
+            },
+            {
+              value: "Indeed",
+              label: "Indeed"
+            },
+            {
+              value: "Company Site",
+              label: "Company Site"
+            },
+            {
+              value: "Networking",
+              label: "Networking"
+            }
+          ]
+        })%>
+  
+        <%- include('../partials/selectInput', {
+          fieldName: "priority",
+          fieldLabel: "Application Priority",
+          fieldValue: "Low",
+          fieldOptions: [
+            {
+              value: "Low",
+              label: "Low"
+            },
+            {
+              value: "Medium",
+              label: "Medium"
+            },
+            {
+              value: "High",
+              label: "High"
+            }
+          ]
+        })%>
+
+        <%- include('../partials/textInput.ejs', {
+          fieldName: "url",
+          fieldLabel: "Link",
+          fieldValue: ""
+        }) %>
+
+        <%- include('../partials/checkboxInput.ejs', {
+          fieldName: "archived",
+          fieldLabel: "Archived",
+          checked: false
+        }) %>
+
+        <%- include('../partials/textInput.ejs', {
+          fieldName: "appliedAt",
+          fieldLabel: "Applied At",
+          fieldValue: new Date().toISOString().slice(0,10)
+        }) %>
         <div class="actions">
-          <button type="submit">Add New Application</button>
+          <button type="submit">Add Application</button>
         </div>
       </form>
     </main>
