--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,10 +1,11 @@
 <nav>
-  <a href="/">Home</a>
+  <!-- <a href="/">Home</a> -->
   <% if(user){ %>
     <a href="/jobApps">My Applications</a>
     <a href="/companies">Companies</a>
+    <a href="/companies">Resumes</a>
     <a href="/auth/logout">Log Out</a>
-    <a href="/auth/profile"><%= user.username%></a>
+    <!-- <a href="/auth/profile"><%= user.username%></a> -->
   <% } else { %>
     <a href="/auth/register">Register</a>
     <a href="/auth/login">Log In</a>
