Implemented new form/create functionality for resume w/ experienceSchema

--- a/views/components/forms/checkboxInput.ejs
+++ b/views/components/forms/checkboxInput.ejs
@@ -1,9 +1,8 @@
 <div class="field">
-  <label for="<%= fieldName %>"> <%= fieldLabel %> </label>
+  <label> <%= fieldLabel %> </label>
   <input
     type="checkbox"
     name="<%= fieldName %>"
-    id="<%= fieldName %>>"
     <%= (checked===true)?"checked":"" %>
   />
 </div>
