--- a/views/components/forms/selectInput.ejs
+++ b/views/components/forms/selectInput.ejs
@@ -1,8 +1,8 @@
 <div class="field">
-    <label for="<%= fieldName %>">
+    <label>
         <%= fieldLabel %>
     </label>
-    <select name="<%= fieldName %>" id="<%= fieldName %>">
+    <select name="<%= fieldName %>">
         <% for(let i = 0; i < fieldOptions.length; i ++){ %>
             <option 
                 value="<%= fieldOptions[i].value %>" 
