--- a/views/components/forms/textInput.ejs
+++ b/views/components/forms/textInput.ejs
@@ -1,9 +1,4 @@
 <div class="field">
-  <label for="<%= fieldName %>"> <%= fieldLabel %> </label>
-  <input
-    type="text"
-    name="<%= fieldName %>"
-    id="<%= fieldName %>>"
-    value="<%=fieldValue%>"
-  />
+  <label> <%= fieldLabel %> </label>
+  <input type="text" name="<%= fieldName %>" value="<%=fieldValue%>" />
 </div>
