--- a/views/resumes/edit.ejs
+++ b/views/resumes/edit.ejs
@@ -18,13 +18,13 @@
                 <%- include('../components/forms/textInput.ejs', {
                     fieldName: "link",
                     fieldLabel: "Link",
-                    fieldValue: resume.name
+                    fieldValue: resume.link
                 })%>
 
                 <%- include('../components/forms/textInput.ejs', {
                     fieldName: "notes",
                     fieldLabel: "Notes",
-                    fieldValue: resume.name
+                    fieldValue: resume.notes
                 })%>
                 <div class="actions">
                     <button type="submit">Add Application</button>
