--- a/views/components/forms/textInput.ejs
+++ b/views/components/forms/textInput.ejs
@@ -1,4 +1,9 @@
 <div class="field">
   <label> <%= fieldLabel %> </label>
-  <input type="text" name="<%= fieldName %>" value="<%=fieldValue%>" />
+  <input 
+    type="text" 
+    name="<%= fieldName %>" 
+    value="<%=fieldValue%>" 
+    <%= (typeof required !== 'undefined' && required)%>
+  />
 </div>
