--- a/views/partials/pageHeader.ejs
+++ b/views/partials/pageHeader.ejs
@@ -1,3 +1,4 @@
 <header>
   <h1 class="page-header"><%= pageTitle %></h1>
+  <div id="error-message"><%= locals.error ? locals.error : ""%></div>
 </header>
