--- a/views/companies/index.ejs
+++ b/views/companies/index.ejs
@@ -9,8 +9,8 @@
       <a class="btn btn-primary btn-lg" href="/companies/new">+ ADD COMPANY</a>
 
       <%- include('../components/tables/table.ejs', {
-        columnNames: ["Company", "Description", "Notes"],
-        columnPaths: ["name", "description", "notes"],
+        columnNames: ["Company", "Last Updated", "Notes"],
+        columnPaths: ["name", "updatedAt", "notes"],
         resourceName: "companies",
         rows: companies
       })%>
