--- a/views/resumes/index.ejs
+++ b/views/resumes/index.ejs
@@ -9,8 +9,8 @@
       <a class="btn btn-primary btn-lg" href="/resumes/new">+ ADD RESUME</a>
 
       <%- include('../components/tables/table.ejs', {
-        columnNames: ["Name", "Link", "Notes"],
-        columnPaths: ["name", "link", "notes"],
+        columnNames: ["Name", "Last Updated", "Notes"],
+        columnPaths: ["name", "updatedAt", "notes"],
         resourceName: "resumes",
         rows: resumes
       })%>
