removed hydrateBlock dead code in repeatableFieldGroup.js; removed some other console logs

--- a/views/companies/index.ejs
+++ b/views/companies/index.ejs
@@ -8,7 +8,7 @@
       <%- include('../partials/pageHeader.ejs'); %>
       <a class="btn btn-primary btn-lg" href="/companies/new">+ ADD COMPANY</a>
 
-      <%- include('../components/tables/table.ejs', {
+      <%- include('../partials/tables/table.ejs', {
         columnNames: ["Company", "Last Updated", "Notes"],
         columnPaths: ["name", "updatedAt", "notes"],
         resourceName: "companies",
