--- a/views/jobApps/index.ejs
+++ b/views/jobApps/index.ejs
@@ -10,7 +10,7 @@
       <a class="btn btn-primary btn-lg" href="/jobApps/new">+ ADD JOB APPLICATION</a>
 
       <% if(jobApps.length>0){ %>
-        <%- include('../components/tables/table.ejs', {
+        <%- include('../partials/tables/table.ejs', {
           columnNames: ["Job Title", "Company", "Status", "Priority", "Last Updated"],
           columnPaths: ["title", "company.name", "status", "priority", "updatedAt"],
           resourceName: "jobApps",
