--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -5,7 +5,12 @@
     <a href="/companies">Companies</a>
     <a href="/resumes">Resumes</a>
     <a href="/coverLetters">Cover Letters</a>
-    <a href="/activities">Activities</a>
+    <a href="/interviews">Interviews</a>
+    <a href="/tasks">Tasks</a>
+    <a href="/calls">Calls</a>
+    <a href="/emails">Emails</a>
+    <a href="/meetings">Meetings</a>
+
 
     <a href="/auth/logout">Log Out</a>
     <!-- <a href="/auth/profile"><%= user.username%></a> -->
